# pypx-DICOMweb

./: .dockerignore  Cargo.toml  README.md  pypx-DICOMweb.Dockerfile
.github/workflows/: ci.yml
example_data/: download.sh  examples.txt
pypx/: Cargo.toml
pypx-DICOMweb/: Cargo.toml  README.md
pypx-DICOMweb/src/: constants.rs  dicom.rs  errors.rs  json_files.rs  main.rs  pypx_reader.rs  router.rs
pypx/src/: models.rs
src/: errors.rs  json_files.rs  main.rs  models.rs  pypx_deserializer.rs  pypx_reader.rs  pypxdb.rs  router.rs  translate.rs
