[package]
name = "pypx_dicomweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom = "0.6.1"
poem = { version = "1.3.58", features = ["server", "opentelemetry", "prometheus"] }
serde = { version = "1.0.188", features = [] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["fs", "rt-multi-thread"] }

pypx = { path = "../pypx-rs" }
tracing = "0.1.37"
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
futures = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["fs"] }

[dev-dependencies]
rstest = "0.18.2"
