[package]
name = "pypx_dicomweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom = "0.6.1"
serde = { version = "1.0.188", features = [] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["fs", "rt-multi-thread", "rt", "macros"] }

pypx = { path = "../pypx" }
futures = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["fs"] }
axum = "0.6.20"

[dev-dependencies]
rstest = "0.18.2"
