[package]
name = "pypx_dicomweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom = "0.6.1"
dicom-json = "0.1.0"
pathdiff = "0.2.1"
serde = { version = "1.0.188", features = [] }
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["fs", "rt-multi-thread", "rt", "macros"] }

pypx = { path = "../pypx" }
futures = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["fs"] }
axum = "0.6.20"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tower-http = { version = "0.4.4", features = ["cors"] }

[dev-dependencies]
rstest = "0.18.2"
